<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_small"
    android:background="@drawable/credit_card_background"
    android:focusableInTouchMode="true"
    android:padding="@dimen/spacing_small">
    <TextView
        android:id="@+id/tv_card_holder_name"
        style="@style/credit_card"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/card_holder_name"/>
    <EditText
        android:id="@+id/edt_card_name"
        style="@style/credit_card_edit_text"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_toEndOf="@id/tv_card_holder_name"
        android:hint="@string/full_name"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edt_card_no"
        style="@style/credit_card_edit_text"
        android:layout_below="@id/edt_card_name"
        android:layout_marginTop="@dimen/spacing_small"
        android:digits="01234-56789"
        android:gravity="end"
        android:hint="@string/dummy_card_value"
        android:inputType="number"
        android:maxLength="19"/>
    <LinearLayout
        android:id="@+id/layout_exp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_card_no"
        android:layout_marginTop="@dimen/spacing_small"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_exp_date"
            style="@style/credit_card"
            android:text="@string/exp_date"/>
        <EditText
            android:id="@+id/edt_exp_date"
            style="@style/credit_card_edit_text"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_weight="1"
            android:digits="0123456789/"
            android:gravity="center"
            android:hint="@string/mm_yy"
            android:inputType="date"
            android:maxLength="5"/>
        <TextView
            android:id="@+id/tv_cvv"
            style="@style/credit_card"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/cvv"/>
        <EditText
            android:id="@+id/edt_cvv"
            style="@style/credit_card_edit_text"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/dummy_cvv"
            android:inputType="numberPassword"
            android:maxLength="4"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/chkb_default_card"
        style="@style/credit_card"
        android:layout_below="@id/layout_exp_date"
        android:layout_marginTop="@dimen/spacing_small"
        android:button="@drawable/checkbox_selector"
        android:padding="@dimen/spacing_small"
        android:text="@string/default_card"/>
</RelativeLayout>